# martins-einkaufsliste

./: build.sh  db.sqlite3  manage.py  modell.puml  pyproject.toml
einkaufsliste/: apps.py
martins_einkaufsliste/: asgi.py  settings.py  urls.py  wsgi.py
mysite/: asgi.py  settings.py  urls.py  wsgi.py
