[tool.poetry]
name = "martins-einkaufsliste"
version = "0.1.0"
description = "Martins Einkaufsliste"
authors = ["Martin Ueding <mu@martin-ueding.de>"]
readme = "README.md"
packages = [{include = "mysite"}, {include = "einkaufsliste"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
